--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "axios": "^0.16.2",
         "react": "^16.0.0",
+        "react-color": "^2.13.8",
         "react-dom": "^16.0.0",
         "react-scripts": "1.0.14",
         "socket.io-client": "^2.0.3"
