--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "axios": "^0.16.2",
+        "axios": "^0.17.1",
         "react": "^16.0.0",
         "react-color": "^2.13.8",
         "react-dom": "^16.0.0",
-        "react-scripts": "1.0.14",
+        "react-scripts": "^1.0.17",
         "socket.io-client": "^2.0.3"
     },
     "scripts": {
