🏔 Updated codeclimate file

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -12,7 +12,7 @@ engines:
     eslint:
         enabled: true
     csslint:
-        enabled: true
+        enabled: false
         checks:
             box-sizing:
                 enabled: false
